5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1807_2566.log
== TEST (2019-06-07 23:36:44) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = sum(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(faltas):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = soma * (faltas2/100)
p3 = soma * (faltas3/100)
p4 = soma * (faltas4/100)
p5 = soma * (faltas5/100)
p6 = soma * (faltas6/100)
p7 = soma * (faltas7/100)

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[7] = p6
z[8] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:37:53) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = sum(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = soma * (faltas2/100)
p3 = soma * (faltas3/100)
p4 = soma * (faltas4/100)
p5 = soma * (faltas5/100)
p6 = soma * (faltas6/100)
p7 = soma * (faltas7/100)

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[7] = p6
z[8] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:39:44) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = sum(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = soma * (faltas2/100)
p3 = soma * (faltas3/100)
p4 = soma * (faltas4/100)
p5 = soma * (faltas5/100)
p6 = soma * (faltas6/100)
p7 = soma * (faltas7/100)

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:42:47) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = sum(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (soma * faltas2)/100
p3 = (soma * faltas3)/100
p4 = (soma * faltas4)/100
p5 = (soma * faltas5)/100
p6 = (soma * faltas6)/100
p7 = (soma * faltas7)/100

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:43:07) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = sum(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (soma * faltas2)/100
p3 = (soma * faltas3)/100
p4 = (soma * faltas4)/100
p5 = (soma * faltas5)/100
p6 = (soma * faltas6)/100
p7 = (soma * faltas7)/100

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:51:34) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = sum(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:53:48) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 23:54:03) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- EXECUTION TIME:
1.1799
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 23:54:15) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- EXECUTION TIME:
0.966075
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:54:23) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:54:34) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:54:56) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
p2 = (100 * faltas2)/soma
p3 = (100 * faltas3)/soma
p4 = (100 * faltas4)/soma
p5 = (100 * faltas5)/soma
p6 = (100 * faltas6)/soma
p7 = (100 * faltas7)/soma

z[0] = p2
z[1] = p3
z[2] = p4
z[3] = p5
z[4] = p6
z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:58:44) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:59:24) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:59:40) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)
z = zeros(6, dtype=float)
faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:00:25) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:01:22) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
		p2 = (100 * faltas2)/soma
		p3 = (100 * faltas3)/soma
		p4 = (100 * faltas4)/soma
		p5 = (100 * faltas5)/soma
		p6 = (100 * faltas6)/soma
		p7 = (100 * faltas7)/soma

		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:01:42) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
		p2 = (100 * faltas2)/soma
		p3 = (100 * faltas3)/soma
		p4 = (100 * faltas4)/soma
		p5 = (100 * faltas5)/soma
		p6 = (100 * faltas6)/soma
		p7 = (100 * faltas7)/soma

		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7

	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:02:10) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
		p2 = (100 * faltas2)/soma
		p3 = (100 * faltas3)/soma
		p4 = (100 * faltas4)/soma
		p5 = (100 * faltas5)/soma
		p6 = (100 * faltas6)/soma
		p7 = (100 * faltas7)/soma

		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7

		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:02:22) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
		p2 = (100 * faltas2)/soma
		p3 = (100 * faltas3)/soma
		p4 = (100 * faltas4)/soma
		p5 = (100 * faltas5)/soma
		p6 = (100 * faltas6)/soma
		p7 = (100 * faltas7)/soma

		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7

		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:02:47) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 and faltas[i] == 3 and faltas[i] == 4 and faltas[i] == 5 and faltas[i] == 6 and faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
		p2 = (100 * faltas2)/soma
		p3 = (100 * faltas3)/soma
		p4 = (100 * faltas4)/soma
		p5 = (100 * faltas5)/soma
		p6 = (100 * faltas6)/soma
		p7 = (100 * faltas7)/soma

		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7

		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:03:48) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	if(faltas[i] == 2 or faltas[i] == 3 or faltas[i] == 4 or faltas[i] == 5 or faltas[i] == 6 or faltas[i] == 7):
		z = zeros(6, dtype=float)
		if(faltas[i] == 2):
			faltas2 = faltas2 + 1
		elif(faltas[i] == 3):
			faltas3 = faltas3 + 1
		elif(faltas[i] == 4):
			faltas4 = faltas4 + 1
		elif(faltas[i] == 5):
			faltas5 = faltas5 + 1
		elif(faltas[i] == 6):
			faltas6 = faltas6 + 1
		elif(faltas[i] == 7):
			faltas7 = faltas7 + 1
		p2 = (100 * faltas2)/soma
		p3 = (100 * faltas3)/soma
		p4 = (100 * faltas4)/soma
		p5 = (100 * faltas5)/soma
		p6 = (100 * faltas6)/soma
		p7 = (100 * faltas7)/soma

		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7

		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:10:17) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:11:02) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:11:27) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 00:11:44) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- EXECUTION TIME:
1.1727
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:11:52) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 00:15:35) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7

print(z)
-- EXECUTION TIME:
1.12013
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 00:56:02) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	z = zeros(6, dtype=float)
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma

	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
print(z)
-- EXECUTION TIME:
1.05513
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 00:59:55) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 >= faltas[i] <= 7):
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 01:00:08) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 >= faltas[i] <= 7):
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- EXECUTION TIME:
1.15614
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 33, in <module>
    z[0] = p2
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:00:45) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 <= faltas[i] <= 7):
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:01:12) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 <= faltas[i] <= 7):
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:01:28) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 <= faltas[i] <= 7):
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:02:06) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 <= faltas[i] <= 7):
		z = zeros(6, dtype=float)
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:02:17) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
	if( 2 <= faltas[i] <= 7):
		z = zeros(6, dtype=float)
		z[0] = p2
		z[1] = p3
		z[2] = p4
		z[3] = p5
		z[4] = p6
		z[5] = p7
		print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 01:03:46) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- EXECUTION TIME:
1.10738
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:03:59) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:04:28) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:04:43) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:05:11) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:05:25) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:05:49) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:06:01) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = p2
	z[1] = p3
	z[2] = p4
	z[3] = p5
	z[4] = p6
	z[5] = p7
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:08:25) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = round(p2,1)
	z[1] = round(p3,1)
	z[2] = round(p4,1)
	z[3] = round(p5,1)
	z[4] = round(p6,1)
	z[5] = round(p7,1)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:08:44) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = round(p2,1)
	z[1] = round(p3,1)
	z[2] = round(p4,1)
	z[3] = round(p5,1)
	z[4] = round(p6,1)
	z[5] = round(p7,1)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 01:09:08) 
-- CODE:
from numpy import*
faltas = array(eval(input("historico de faltas:")))
soma = size(faltas)

faltas2= 0
faltas3= 0
faltas4= 0
faltas5= 0
faltas6= 0
faltas7= 0

for i in range(size(faltas)):
	
	if(faltas[i] == 2):
		faltas2 = faltas2 + 1
	elif(faltas[i] == 3):
		faltas3 = faltas3 + 1
	elif(faltas[i] == 4):
		faltas4 = faltas4 + 1
	elif(faltas[i] == 5):
		faltas5 = faltas5 + 1
	elif(faltas[i] == 6):
		faltas6 = faltas6 + 1
	elif(faltas[i] == 7):
		faltas7 = faltas7 + 1
	p2 = (100 * faltas2)/soma
	p3 = (100 * faltas3)/soma
	p4 = (100 * faltas4)/soma
	p5 = (100 * faltas5)/soma
	p6 = (100 * faltas6)/soma
	p7 = (100 * faltas7)/soma
if( 2 <= faltas[i] <= 7):
	z = zeros(6, dtype=float)
	z[0] = round(p2,1)
	z[1] = round(p3,1)
	z[2] = round(p4,1)
	z[3] = round(p5,1)
	z[4] = round(p6,1)
	z[5] = round(p7,1)
	print(z)
-- EXECUTION TIME:
1.17993
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
